--- a/src/ArcSegment.css
+++ b/src/ArcSegment.css
@@ -1,6 +1,7 @@
 /* ArcSegment.css */
 .arc-segment {
     transition: fill 0.2s ease;
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
   }
   
   .arc-segment:hover {
@@ -162,4 +163,28 @@
 
 .basic-grey .button:hover {
   background: #CF7A7A;
+}
+
+/* 在 PW.css 中添加 */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* 确保浮在最上层 */
+}
+
+.modal-content {
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  width: 300px;
+  text-align: center;
+  z-index: 1001;
 }
