--- a/src/PW.css
+++ b/src/PW.css
@@ -22,7 +22,13 @@ svg {
     gap: 1rem;
     flex: 1;
   }
-  .powerwheel-container {
-    background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+  
+
+  body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+        font-family: Tahoma, sans-serif;
   }
   
