--- a/src/ArcSegment.css
+++ b/src/ArcSegment.css
@@ -13,7 +13,7 @@
     border: 1px solid #ccc;
     border-radius: 6px;
     max-width: 250px;
-    pointer-events: none; /* 避免遮挡鼠标事件 */
+    pointer-events: none; 
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
     z-index: 10;
   }
@@ -27,7 +27,7 @@
     font-size: 12px;
   }
   
- /*表单*/
+ /*Form*/
 .sector-form {
   position: absolute;
   top: 50%;
@@ -153,18 +153,17 @@
   background: #CF7A7A;
 }
 
-/* 在 PW.css 中添加 */
 .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* 确保浮在最上层 */
+  z-index: 1000; 
 }
 
 .modal-content {
@@ -183,38 +182,38 @@
   box-sizing: border-box;
 }
 
-/* .btn-container 使父容器支持 Flexbox 布局 */
+
 .btn-container {
   display: flex;
-  justify-content: center;  /* 水平居中 */
-  align-items: center;  /* 垂直居中 */
-  gap: 1rem;  /* 两个按钮之间的间距 */
-  margin-top: 2rem; /* 顶部间距，可以根据需要调整 */
-  height: 10vh;  /* 确保容器有足够的高度 */
+  justify-content: center; 
+  align-items: center;  
+  gap: 1rem;  
+  margin-top: 2rem; 
+  height: 10vh;  
 }
 
-/* 按钮样式 */
+/* Button Rotate */
 .btn-87 {
   -webkit-tap-highlight-color: transparent;
   -webkit-appearance: button;
-  background-color: rgb(233, 197, 130);  /* 背景颜色 */
-  color: #000;  /* 文字颜色 */
+  background-color: rgb(233, 197, 130);  
+  color: #000;  
   cursor: pointer;
-  text-align: center; /* 文本居中 */
-  width: 80px;  /* 设置按钮的宽度 */
-  height: 80px; /* 设置按钮的高度 */
-  border-radius: 50%; /* 使按钮变圆形 */
+  text-align: center; 
+  width: 80px;  
+  height: 80px; 
+  border-radius: 50%; 
   display: flex;
-  justify-content: center;  /* 水平居中 */
-  align-items: center; /* 垂直居中 */
-  font-weight: bold;  /* 文字加粗 */
-  font-size: 16px;  /* 字体大小 */
+  justify-content: center;  
+  align-items: center; 
+  font-weight: bold;  
+  font-size: 16px;  
 }
 .btn-87:active {
-  background-color: darkorange;  /* 按钮被点击时背景变暗 */
-  transform: scale(0.95);  /* 点击时按钮缩小 */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  /* 按下时添加阴影 */
+  background-color: darkorange;  
+  transform: scale(0.95);  
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  
 }
 .btn-87:hover {
-  background-color: darkorange;  /* 鼠标悬停时按钮背景变暗 */
+  background-color: darkorange;  
 }
